--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div id="time">Time left: <progress value="10" max="10" id="progressBar"></progress>
       </div>
       <div id="message">Press "Enter" to start</div>
+      <button type="button" id="reset" class="reset2">Try Again</button>
     </section>
   </body>
 
